src/test/fun-test/semantic/AssignmentStrictConversion4.java.err
Semantic error: type mismatch - expected INT, got LONG, line 10, pos 15
